--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,5 +5,6 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
+    "pyperclip>=1.9.0",
     "streamlit>=1.43.2",
 ]
